Fix bounded volume path in docker-compose-dev. Remove instruction for creating docker machine on hosts other than Linux as it is not necessary

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -10,6 +10,6 @@ services:
     build:
       context: ./smart_alarm
     volumes:
-       - .:/app
+       - ./smart_alarm:/app
     links:
       - "postgresql:smart_alarm_postgresql_host"
