--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,7 +2,9 @@ version: '3.2'
 
 services:
   postgresql:
-    image: postgres:10.0-alpine
+    build:
+      context: ./postresql
+      dockerfile: Dockerfile-dev
     ports:
       - "5432:5432"
 
