--- a/smart_alarm/requirements/requirements.txt
+++ b/smart_alarm/requirements/requirements.txt
@@ -7,6 +7,7 @@ django-environ==0.4.4
 djangorestframework==3.7.3
 idna==2.6
 oauthlib==2.0.6
+psycopg2==2.7.3.2
 python3-openid==3.1.0
 pytz==2017.3
 requests==2.18.4
