Run development server with runserver_plus for more verbose debug logs. Remove staticfiles middleware so Django app finally works

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -15,3 +15,5 @@ services:
        - ./smart_alarm:/app
     links:
       - "postgresql:smart_alarm_postgresql_host"
+    ports:
+      - "8000:8000"
