--- a/smart_alarm/requirements/requirements-dev.txt
+++ b/smart_alarm/requirements/requirements-dev.txt
@@ -2,3 +2,6 @@
 
 # Includes additional dependencies required during development
 # e.g. for executing unit tests
+
+django-extensions==1.9.7
+Werkzeug==0.12.2
