[Android] Refactor classes for reading raw properties into common IRawProperties interface. Obtain fitbit client id from endpoint in FitbitAuthorizationAcitivty

--- a/SmartAlarmAndroid/app/src/main/res/raw/smart_alarm.properties
+++ b/SmartAlarmAndroid/app/src/main/res/raw/smart_alarm.properties
@@ -1,1 +1,3 @@
-smart_alarm_url=https://10.0.2.2:8000"
+smart_alarm_url=http://10.0.2.2:8000
+client_id_endpoint=auth/fitbit/client_id
+auth_endpoint=auth/fitbit/
