--- a/SmartAlarmAndroid/app/src/main/AndroidManifest.xml
+++ b/SmartAlarmAndroid/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".FitbitAuthorization"
+            android:name=".auth.FitbitAuthorizationActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
