--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -17,3 +17,5 @@ services:
       - "postgresql:smart_alarm_postgresql_host"
     ports:
       - "8000:8000"
+    env_file:
+      - smart-alarm-dev.env
