[ANDROID] Parse Fitbit Client ID in JSON reponse from backend. Send Intent to start Activity opening Fitbit Auth Page with Chrome Custom Tabs

--- a/SmartAlarmAndroid/app/src/main/res/raw/fitbit.properties
+++ b/SmartAlarmAndroid/app/src/main/res/raw/fitbit.properties
@@ -1,1 +1,1 @@
-fitbit_auth_url="https://www.fitbit.com/oauth2/authorize"
+fitbit_auth_url=https://www.fitbit.com/oauth2/authorize?response_type=code&scope=activity%20nutrition%20heartrate%20location%20nutrition%20profile%20settings%20sleep%20social%20weight
