--- a/SmartAlarmAndroid/app/build.gradle
+++ b/SmartAlarmAndroid/app/build.gradle
@@ -31,5 +31,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:26.+'
     compile 'com.android.support:design:26.+'
+    compile 'com.android.support:customtabs:26.+'
+    compile 'com.google.code.gson:gson:2.8.2'
     testCompile 'junit:junit:4.12'
 }
